; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_statem.c_statem_do_write.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_statem.c_statem_do_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i64 }

@TLS_ST_CW_CHANGE = common dso_local global i64 0, align 8
@TLS_ST_SW_CHANGE = common dso_local global i64 0, align 8
@SSL3_RT_CHANGE_CIPHER_SPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*)* @statem_do_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @statem_do_write(%struct.TYPE_8__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  store %struct.TYPE_9__* %6, %struct.TYPE_9__** %4, align 8
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @TLS_ST_CW_CHANGE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %18, label %12

12:                                               ; preds = %1
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @TLS_ST_SW_CHANGE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %30

18:                                               ; preds = %12, %1
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %20 = call i64 @SSL_IS_DTLS(%struct.TYPE_8__* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %18
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %24 = load i32, i32* @SSL3_RT_CHANGE_CIPHER_SPEC, align 4
  %25 = call i32 @dtls1_do_write(%struct.TYPE_8__* %23, i32 %24)
  store i32 %25, i32* %2, align 4
  br label %33

26:                                               ; preds = %18
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %28 = load i32, i32* @SSL3_RT_CHANGE_CIPHER_SPEC, align 4
  %29 = call i32 @ssl3_do_write(%struct.TYPE_8__* %27, i32 %28)
  store i32 %29, i32* %2, align 4
  br label %33

30:                                               ; preds = %12
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %32 = call i32 @ssl_do_write(%struct.TYPE_8__* %31)
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %30, %26, %22
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @SSL_IS_DTLS(%struct.TYPE_8__*) #1

declare dso_local i32 @dtls1_do_write(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @ssl3_do_write(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @ssl_do_write(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
